# EquilibrioHidrostatico

./: .gitignore  CMakeLists.txt  CMakePresets.json  EquilibrioHidrostatico.cpp  EquilibrioHidrostatico.h  EquilibrioHidrostaticoCUDA.sln  Graficas_EquilibrioHidrostaticoPerfil.m  Graficas_Script.m  README.md
EQHS_Data/: CMakeLists.txt  DataUtils.cpp  DataUtils.h  ExportDataContainer.h
EQHS_Integrador/: CMakeLists.txt  DataContainer.cpp  DataContainer.h  Integrador.cpp  Integrador.h
EquilibrioHidrostatico/: CMakeLists.txt  DataUtils.cpp  DataUtils.h  EquilibrioHidrostatico.cpp  EquilibrioHidrostatico.h
EquilibrioHidrostaticoCUDA/: EquilibrioHidrostaticoCUDA.vcxproj  EquilibrioHidrostaticoCUDA.vcxproj.filters  cuda_common.cuh  eqhs.cu  eqhs_phys.cuh  kernel.cu  phys_consts.cuh
EquilibrioHidrostaticoCUDA/results/: cudaResults.csv
Reporte/: Codigos.tex  Conclusion.tex  Introduccion.tex  main.tex  ref.bib
Scripts_Graficas/: .octaverc  Graficas_EcuacionIdeal.m  Graficas_EquilibrioHidrostaticoPerfil.m  plot_data_helper.m
